--- a/ProAcc/Views/Customers/Create.cshtml
+++ b/ProAcc/Views/Customers/Create.cshtml
@@ -268,14 +268,21 @@
 
         }
     });
-
+    
+}
     //function ValidateName(data) {
     //         var letters = /^[A-Za-z, ]+$/;
     //        if (!letters.test(data)) {
     //            return false;
     //        }
     //}
+    function validatename() {
+    var inputValue = event.which;
 
+    if (!(inputValue >= 65 && inputValue <= 122) && (inputValue != 32 && inputValue != 0)) {
+        //$("#lblPhaseName").html("Not Allowed").show().fadeOut(2000);
+        return false;
+    }
     $("#btnCustomerCreate").on("click", function () {
         
         var CompanyName = $("#txtCompanyName").val().trim();
