--- a/ProAcc/Views/ProjectMonitor/PMAdminCreate.cshtml
+++ b/ProAcc/Views/ProjectMonitor/PMAdminCreate.cshtml
@@ -448,7 +448,7 @@
             data: '{RoleID: ' + JSON.stringify(0)+ '}',
             //data: '{Phase: ' + JSON.stringify(Phase) + ',condition:' + JSON.stringify(condition) + '}',
             dataType: "json",
-            async: false,
+            async: true,
             contentType: "application/json; charset=utf-8",
             success: function (Data) {
                 debugger;
